diplom/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
  namespace: ingress-nginx
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - name: http
      port: 80
      targetPort: myapphttp
      nodePort: 30080
