diplom/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
    - host: mycluster.royana.ru
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: myapp-svc
                port:
                  number: 80
            path: /myapp
